// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`manager/ruby-version/extract extractPackageFile() returns a result 1`] = `
Array [
  Object {
    "currentValue": "8.4.0",
    "datasource": "ruby-version",
    "depName": "ruby",
  },
]
`;

exports[`manager/ruby-version/extract extractPackageFile() skips non ranges 1`] = `
Array [
  Object {
    "currentValue": "latestn",
    "datasource": "ruby-version",
    "depName": "ruby",
  },
]
`;

exports[`manager/ruby-version/extract extractPackageFile() supports ranges 1`] = `
Array [
  Object {
    "currentValue": "8.4",
    "datasource": "ruby-version",
    "depName": "ruby",
  },
]
`;
